name:                authentication
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/token-authentication#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Snap.Snaplet.Authentication
                     , Snap.Snaplet.Types
  build-depends:       base                 >= 4.7    && < 5
                     , aeson
                     , bytestring           >= 0.10.8 && < 0.11
                     , cereal               >= 0.5    && < 0.6
                     , clientsession        >= 0.9    && < 10
                     , containers           >= 0.5    && < 0.6
                     , crypto-api
                     , errors               >= 2.1    && < 2.2
                     , jose                 >= 0.5  && < 0.6
                     , jose-jwt
                     , jwt                  >= 0.7    && < 0.8
                     , lens
                     , monad-time
                     , mtl
                     , snap                 >= 1.0    && < 1.1
                     , snap-core
                     , text                 >= 1.2    && < 1.3
                     , time                 >= 1.6    && < 1.7
                     , transformers         >= 0.5
                     , unordered-containers
                     , uuid                 >= 1.3    && < 1.4
                     , uuid-aeson
  default-language:    Haskell2010

test-suite token-authentication-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , authentication
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
